# fast-trigger

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  quality.yml  release.yml  sanitizers.yml  wheels.yml
cpp/include/fast_trigger/: fast_trigger_mdspan.h  sta_lta.hpp
cpp/src/: bindings.cpp  sta_lta.cpp
scripts/: cleanup-local.ps1
src/fast_trigger/: __init__.py
tests/: test_audit.py  test_basic.py  test_hypothesis.py
tests/cpp/: sta_lta_test.cpp
